--- a/bootstrap.html
+++ b/bootstrap.html
@@ -40,13 +40,57 @@
     <div class="container">
       <div class="card" style="width: 36rem;">
         <div class="card-body">
-          <h5 class="card-title">Special title treatment</h5>
-          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+          <h1 class="card-title">Special title treatment</h1>
+          <p class="card-text">With supporting text below as a natural lead-in to additional content. With supporting text below as a natural lead-in to additional content. </p>
           <a href="#" class="btn btn-primary">Go somewhere</a>
         </div>
       </div>
       <div class="fotobox">
         <img src="square.jpeg" class="img-fluid" alt="pastatas">
+      </div>
+    </div>
+    <div class="container">
+      <div class="card" style="width: 36rem;">
+        <div class="card-body">
+          <h1 class="card-title">OUR BLOG</h1>
+          <p class="card-text">With supporting text below as a natural lead-in to additional content. </p>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="card-group">
+        <div class="card">
+          <img src="square.jpeg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">BLOG 1</h5>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+          </div>
+        </div>
+        <div class="card">
+          <img src="square.jpeg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">BLOG 2</h5>
+            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+          </div>
+        </div>
+        <div class="card">
+          <img src="square.jpeg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">BLOG 3</h5>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="card" style="width: 36rem;">
+        <div class="card-body">
+          <h1 class="card-title">SHOWCASE</h1>
+          <p class="card-text">With supporting text below as a natural lead-in to additional content. </p>
+        </div>
       </div>
     </div>
     <div class="bandom"><p>raudona</p></div>    
