--- a/bootstrap.html
+++ b/bootstrap.html
@@ -93,6 +93,67 @@
         </div>
       </div>
     </div>
+    <div class="container">
+          <div class="card-group">        
+        <div class="card">
+          <img src="nike-shoe.jpeg" class="card-img-top first" alt="...">
+          <img src="hipster-lamp.jpeg" class="card-img-top next" alt="...">          
+        </div> 
+        <div class="card"> 
+          <img src="hipster-lamp.jpeg" class="card-img-top next" alt="...">         
+          <img src="nike-shoe.jpeg" class="card-img-top first" alt="...">                     
+        </div> 
+        <div class="card">
+          <img src="nike-shoe.jpeg" class="card-img-top first" alt="...">
+          <img src="hipster-lamp.jpeg" class="card-img-top next" alt="...">   
+        </div>        
+      </div>
+    </div>
+    <div class="container">
+      <div class="card" style="width: 36rem;">
+        <div class="card-body">
+          <h1 class="card-title">ABOUT US.</h1>
+          <p class="card-text">With supporting text below as a natural lead-in to additional content. </p>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="fotobox">
+        <img src="square.jpeg" class="img-fluid" alt="pastatas">
+      </div>
+      <div class="card" style="width: 36rem;">
+        <div class="card-body">
+          <h3 class="card-title">Little about us</h3>
+          <p class="card-text">With supporting text below as a natural lead-in to additional content. With supporting text below as a natural lead-in to additional content. </p>         
+        </div>
+      </div>      
+    </div>
+    <!--<div class="container">
+      <div class="dufoto">
+        <div class="fotobox">
+          <img src="square.jpeg" class="img-fluid" alt="pastatas">
+        </div>
+        <div class="fotobox">
+          <img src="square.jpeg" class="img-fluid" alt="pastatas">
+        </div>
+      </div>
+      <div class="dufoto">
+        <div class="fotobox">
+          <img src="square.jpeg" class="img-fluid" alt="pastatas">
+        </div>
+        <div class="fotobox">
+          <img src="square.jpeg" class="img-fluid" alt="pastatas">
+        </div>
+      </div>
+      <div class="dufoto">
+        <div class="fotobox">
+          <img src="square.jpeg" class="img-fluid" alt="pastatas">
+        </div>
+        <div class="fotobox">
+          <img src="square.jpeg" class="img-fluid" alt="pastatas">
+        </div>
+      </div>
+    </div>-->
     <div class="bandom"><p>raudona</p></div>    
     
 </body>
