--- a/bootstrap.html
+++ b/bootstrap.html
@@ -140,24 +140,31 @@
       </div>      
     </div>
     -->
-    
-    <div class="container">      
-          <div class="container1">
-            <img class="img-fluid card-img-top" src="square.jpeg" alt="Snow">
-            <a href="#" class="btn btn-primary pers">Go somewhere</a>
-          </div>  
-          <div class="container1">
-            <img class="img-fluid card-img-top" src="square.jpeg" alt="Snow">
-            <a href="#" class="btn btn-primary pers">Go somewhere</a>
-          </div>    
-        <div>          
-          <div class="card-body">
-            <h5 class="card-title">BLOG 3</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+    <div class="container">
+      <div class="card-group">
+          <div class="card">
+            <img src="square.jpeg" class="card-img-top" alt="...">
+            <div class="card-img-overlay">
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
           </div>
-        </div>     
+          <div class="card">
+            <img src="square.jpeg" class="card-img-top" alt="...">
+            <div class="card-img-overlay">
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+          <div class="card">          
+            <div class="card-img-overlay">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <p class="card-text">Last updated 3 mins ago</p>
+            </div>
+        </div>
+      </div>
+
     </div>
+
    
 
     
