--- a/bootstrap.html
+++ b/bootstrap.html
@@ -60,7 +60,7 @@
     <div class="container">
       <div class="card-group">
         <div class="card">
-          <img src="square.jpeg" class="card-img-top" alt="...">
+          <img src="blog1.jpg" class="card-img-top" alt="blog1">
           <div class="card-body">
             <h5 class="card-title">BLOG 1</h5>
             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -68,7 +68,7 @@
           </div>
         </div>
         <div class="card">
-          <img src="square.jpeg" class="card-img-top" alt="...">
+          <img src="blog2.jpg" class="card-img-top" alt="blog2">
           <div class="card-body">
             <h5 class="card-title">BLOG 2</h5>
             <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
@@ -76,7 +76,7 @@
           </div>
         </div>
         <div class="card">
-          <img src="square.jpeg" class="card-img-top" alt="...">
+          <img src="blog3.jpg" class="card-img-top" alt="blog3">
           <div class="card-body">
             <h5 class="card-title">BLOG 3</h5>
             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
@@ -117,39 +117,16 @@
         </div>
       </div>
     </div>
-
-    <!--
-    <div class="container">
-      <div class="card bg-dark text-white">
-        <img src="square.jpeg" class="card-img" alt="...">
-        <div class="card-img-overlay">          
-          <a class="btnperson" href="#" class="btn btn-primary">Go somewhere</a>
-        </div>
-      </div>
-      <div class="card bg-dark text-white">
-        <img src="square.jpeg" class="card-img" alt="...">
-        <div class="card-img-overlay">          
-          <a href="#" class="btn btn-primary">Go somewhere</a>
-        </div>
-      </div>      
-      <div class="card little" style="width: 36rem;">
-        <div class="card-body">
-          <h3 class="card-title">Little about us</h3>
-          <p class="card-text">With supporting text below as a natural lead-in to additional content. With supporting text below as a natural lead-in to additional content. </p>         
-        </div>
-      </div>      
-    </div>
-    -->
     <div class="container">
       <div class="card-group">
           <div class="card">
-            <img src="square.jpeg" class="card-img-top" alt="...">
+            <img src="man1.jpg" class="card-img-top" alt="man1">
             <div class="card-img-overlay">
               <a href="#" class="btn btn-primary">Tadas Lastauskas</a>
             </div>
           </div>
           <div class="card">
-            <img src="square.jpeg" class="card-img-top" alt="...">
+            <img src="man2.jpg" class="card-img-top" alt="man2">
             <div class="card-img-overlay">
               <a href="#" class="btn btn-primary">Tadas Lastauskas</a>
             </div>
@@ -188,7 +165,7 @@
         </div>
       </div>
         <div class="fotobox fotocontact">
-          <img src="square.jpeg" class="img-fluid fotocontact" alt="pastatas">
+          <img src="city.jpg" class="img-fluid fotocontact" alt="pastatas">
         </div>     
     </div>
     <div class="blackfooter">
